# Messenger

./: .gitignore  .~lock.key.txt.pub#
Client/: BasePalette.xml  CMakeLists.txt  client.cpp  client.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  registration.cpp  registration.h  registration.ui
Server/: CMakeLists.txt  Messagesdb  Usersdb  databasemanager.cpp  databasemanager.h  main.cpp  server.cpp  server.h
